--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_URL=https://api.themoviedb.org/3/
-API_KEY=0d50289d846a8268f13c12229a8640d6
+API_KEY=aee238dbc9319e7ff01663e9e3d4ec01
+API_IMAGE=https://image.tmdb.org/t/p/w500
