--- a/package.json
+++ b/package.json
@@ -13,16 +13,24 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "axios": "^0.27.2",
+    "@types/react-native": "0.69.2",
+    "apisauce": "^2.1.5",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.2",
     "react-native-config": "^1.4.6",
     "react-native-image-slider-show": "^1.0.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.4.4",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-swipeable-list": "^0.1.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.23.0",
+    "react-native-youtube-iframe": "^2.2.2",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
